--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Prompt&display=swap"
+      rel="stylesheet"
+    />
     <title>Quotesera</title>
   </head>
   <body>
